# PyElegantSDDS

./: .orig.API.rst  API.rst  HISTORY.rst  README.rst  db.json  micc.json  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  requirements.txt
docs/notebook/: FODO.lte  Tutorial_ElegantCommand.ipynb  Tutorial_ElegantRun.ipynb  Tutorial_ElegantRun_Basic.ipynb  Tutorial_SDDS.ipynb  Tutorial_sddscommand.ipynb  Untitled.ipynb  basic.ele  basic_test.ele  bii_simple.lte  parTrack.lte  partrack.lte  run_pelegant.sh  temp-001.w1  temp-001.w1.txt  temp-001.wq  temp-001.wq.txt  temp-001_processed.wq  temp-001_processed.wq.txt  temp.aper  temp.cen  temp.done  temp.ele  temp.fin  temp.fma  temp.fma.txt  temp.mag  temp.mat  temp.out  temp.params  temp.rf  temp.sdds  temp.sdds.txt  temp.twi  temp_particles_input.bin.txt  temp_processed.aper  temp_processed.aper.txt  temp_run_pelegant.sh  temp_scan.sdds  test.ele
pyelegantsdds/: __init__.py  elegant_command.py  elegantrun.py  sdds.py
pyelegantsdds/tools/: __init__.py  sddsutils.py
tests/: __init__.py  test_elegant_command.py  test_elegantrun.py  test_pyelegantsdds.py  test_sdds.py  test_tools.py
