[tool.poetry]
name = "PyElegantSDDS"
version = "0.1.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/PyElegantSDDS"
homepage = "https://github.com/tomerten/PyElegantSDDS"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.2"
pandas = "^1.2.4"
dask = "^2021.4.1"
termcolor = "^1.1.0"
scipy = "^1.6.3"
PyNAFF = "^1.1.4"
tqdm = "^4.60.0"
ipykernel = "^5.5.4"
matplotlib = "^3.4.2"
isort = "^5.8.0"
nbsphinx = "^0.8.4"
ipython = "^7.23.1"
pandoc = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
black = "^21.5b0"
isort = "^5.8.0"
pylint = "^2.8.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
